Added Java 22 features: String Templates, Sequenced Collections, Streams, Virtual Threads